# major-tom-s3-vectors

./: README.md  ingest_to_s3vectors.py  main.py  mtom_download.py  pyproject.toml
assets/: kikaijima.geojson
